--- a/rstudio/install
+++ b/rstudio/install
@@ -21,5 +21,5 @@ chown -R ubuntu:ubuntu /usr/lib/rstudio-server
 rm -rf /tmp/rstudio-temp
 
 
-RUN echo "www-frame-origin=any" >> /etc/rstudio/rserver.conf && \
+ echo "www-frame-origin=any" >> /etc/rstudio/rserver.conf
 chown ubuntu:ubuntu /etc/rstudio/rserver.conf
