changing oursql to oursql3

--- a/superset/install
+++ b/superset/install
@@ -23,4 +23,4 @@ ENV SUPERSET_VERSION=0.20.6 \
     dpkg -i mysql-connector-python-cext_2.1.7-1ubuntu14.04_amd64.deb 
     apt-get update 
     apt-get install -y libmysqlclient-dev 
-    pip install mysqlclient oursql
+    pip install mysqlclient oursql3
