--- a/superset/install
+++ b/superset/install
@@ -1,8 +1,8 @@
 # Superset setup options
-ENV SUPERSET_VERSION=0.20.6 \
- SUP_ROW_LIMIT=5000 \
- SUP_SECRET_KEY='thisismysecretkey' \
- SUP_CSRF_ENABLED=True
+export SUPERSET_VERSION=0.20.6 
+export SUP_ROW_LIMIT=5000 
+export SUP_SECRET_KEY='thisismysecretkey' 
+export SUP_CSRF_ENABLED=True
 
 
     apt-get update 
