--- a/rstudio/install
+++ b/rstudio/install
@@ -1,24 +1,18 @@
 #!/bin/bash
 set -o nounset -o errexit -o pipefail
 
-mkdir /tmp/rstudio-temp
-cd /tmp/rstudio-temp
-apt-get install -y gdebi-core libapparmor1 
 
+ mkdir /tmp/rstudio-temp
+ cd /tmp/rstudio-temp
+ apt-get install -y gdebi-core libapparmor1
+ wget https://download2.rstudio.org/rstudio-server-1.1.419-amd64.deb
+ gdebi -n rstudio-server-1.1.419-amd64.deb
 
-
-cd /tmp/rstudio-temp
-apt-get -y install gdebi-core
-wget https://download2.rstudio.org/rstudio-server-1.1.414-amd64.deb
-gdebi -n rstudio-server-1.1.414-amd64.deb
-ln -s /usr/lib/rstudio-server /usr/local/lib/rstudio-server
+ ln -s /usr/lib/rstudio-server /usr/local/lib/rstudio-server 
+ chown -R root:root /usr/lib/rstudio-server
+ cd ~
 rm -rf /tmp/rstudio-temp
 
-
-
-ln -s /usr/lib/rstudio-server /usr/local/lib/rstudio-server
-chown -R ubuntu:ubuntu /usr/lib/rstudio-server
-rm -rf /tmp/rstudio-temp
 
 
  echo "www-frame-origin=any" >> /etc/rstudio/rserver.conf
