move pandoc fix from dockerfile into repo

--- a/rstudio/install
+++ b/rstudio/install
@@ -17,3 +17,8 @@ rm -rf /tmp/rstudio-temp
 
  echo "www-frame-origin=any" >> /etc/rstudio/rserver.conf
 chown ubuntu:ubuntu /etc/rstudio/rserver.conf
+
+#Make rmarkdown::render work outside of rstudio. https://github.com/rstudio/rmarkdown/blob/master/PANDOC.md
+ln -s /usr/lib/rstudio-server/bin/pandoc/pandoc /usr/local/bin
+ln -s /usr/lib/rstudio-server/bin/pandoc/pandoc-citeproc /usr/local/bin
+
