--- a/rstudio/install
+++ b/rstudio/install
@@ -16,8 +16,13 @@ rm -rf /tmp/rstudio-temp
 
 
  echo "www-frame-origin=any" >> /etc/rstudio/rserver.conf
- echo server-app-armor-enabled=0 >> /etc/rstudio/rserver.conf
 chown ubuntu:ubuntu /etc/rstudio/rserver.conf
+
+echo "usr/bin/R rix" >> /etc/apparmor.d/rstudio-server
+echo "/usr/lib64/R/ r" >> /etc/apparmor.d/rstudio-server
+echo "/usr/lib64/R/** rmix"   >> /etc/apparmor.d/rstudio-server
+
+
 
 #Make rmarkdown::render work outside of rstudio. https://github.com/rstudio/rmarkdown/blob/master/PANDOC.md
 ln -s /usr/lib/rstudio-server/bin/pandoc/pandoc /usr/local/bin
