--- a/Zeppelin/install
+++ b/Zeppelin/install
@@ -1,8 +1,8 @@
- wget http://mirror.reverse.net/pub/apache/zeppelin/zeppelin-0.7.3/zeppelin-0.7.3-bin-all.tgz && \
- tar xvzf zeppelin-0.7.3-bin-all.tgz 
+ wget http://apache.claz.org/zeppelin/zeppelin-0.8.0/zeppelin-0.8.0-bin-all.tgz && \
+ tar xvzf zeppelin-0.8.0-bin-all.tgz
  rm -rf /opt/zeppelin 
- mv zeppelin-0.7.3-bin-all /opt/zeppelin 
- rm zeppelin-0.7.3-bin-all.tgz 
+ mv zeppelin-0.8.0-bin-all /opt/zeppelin 
+ rm zeppelin-0.8.0-bin-all.tgz 
  chown -R ubuntu:ubuntu /opt/zeppelin
  mv  /var/opt/workspaces/Zeppelin/zeppelin-env.txt /opt/zeppelin/conf/zeppelin-env.sh 
  chmod 755 /opt/zeppelin/conf/zeppelin-env.sh 
