--- a/jupyter/install
+++ b/jupyter/install
@@ -2,33 +2,29 @@
 set -o nounset -o errexit -o pipefail
 
 #install Jupyter
-pip install jsonschema ipython[all]
-
-
+pip install jsonschema jupyter
 
 # #   # CONFIGURE Jupyter
- mkdir -p /home/ubuntu/.ipython/profile_default 
-echo 'c = get_config()' > /home/ubuntu/.ipython/profile_default/ipython_config.py 
-echo '# The default cell execution timeout in nbconvert is 30 seconds, set it to a year' >> /home/ubuntu/.ipython/profile_default/ipython_config.py 
-echo 'c.ExecutePreprocessor.timeout = 365*24*60*60' >> /home/ubuntu/.ipython/profile_default/ipython_config.py 
-echo 'c = get_config()' > /home/ubuntu/.ipython/profile_default/ipython_notebook_config.py 
-echo '# Allow embedding of notebooks in iframes' >> /home/ubuntu/.ipython/profile_default/ipython_notebook_config.py 
-echo 'c.NotebookApp.tornado_settings = { "headers": { "Content-Security-Policy": "frame-ancestors *" } }' >> /home/ubuntu/.ipython/profile_default/ipython_notebook_config.py 
-echo "c.NotebookApp.token = ''" >> /home/ubuntu/.ipython/profile_default/ipython_notebook_config.py 
-#Custom js for domino header
-mkdir -p /home/ubuntu/.ipython/profile_default/static/custom/ && echo "require(['base/js/namespace'], function(IPython) { IPython._target='_self'; });" >> /home/ubuntu/.ipython/profile_default/static/custom/custom.js && chown -R ubuntu:ubuntu /home/ubuntu/.ipython 
 mkdir -p /home/ubuntu/.jupyter
-rm -f /home/ubuntu/.jupyter/jupyter_notebook_config.py 
-ln -s /home/ubuntu/.ipython/profile_default/ipython_notebook_config.py /home/ubuntu/.jupyter/jupyter_notebook_config.py 
-chown -R ubuntu:ubuntu /home/ubuntu/.ipython/profile_default/ipython_notebook_config.py 
-chown -R ubuntu:ubuntu /home/ubuntu/.jupyter/jupyter_notebook_config.py
-mkdir -p /home/ubuntu/.jupyter/profile_default/static/custom/ 
- echo "require(['base/js/namespace'], function(IPython) { IPython._target='_self'; });" >> /home/ubuntu/.jupyter/profile_default/static/custom/custom.js 
- chown -R ubuntu:ubuntu /home/ubuntu/.jupyter
+echo 'c = get_config()' > /home/ubuntu/.jupyter/jupyter_notebook_config.py
+
+# The default cell execution timeout in nbconvert is 30 seconds, set it to a year
+echo '# The default cell execution timeout in nbconvert is 30 seconds, set it to a year' >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
+echo 'c.ExecutePreprocessor.timeout = 365*24*60*60' >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
+
+# Allow embedding of notebooks in iframes
+echo '# Allow embedding of notebooks in iframes' >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
+echo 'c.NotebookApp.tornado_settings = { "headers": { "Content-Security-Policy": "frame-ancestors *" } }' >> /home/ubuntu/.jupyter/jupyter_notebook_config.py 
+echo "c.NotebookApp.token = ''" >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
+
+#Custom js for domino header. New noebooks open within the same tab with the Domino banner. 
+mkdir -p /home/ubuntu/.jupyter/custom/
+echo "require(['base/js/namespace'], function(jupyter) { jupyter._target='_self'; });" >> /home/ubuntu/.jupyter/custom/custom.js 
 
 # Disable the login for Jupyter
  mkdir -p /home/ubuntu/.jupyter 
  printf "\nc.NotebookApp.token = u'' \n\n" >> /home/ubuntu/.jupyter/jupyter_notebook_config.py 
- chown -R ubuntu:ubuntu /home/ubuntu/.jupyter 
- chown -R ubuntu:ubuntu /home/ubuntu/
-
+ 
+ 
+ 
+ chown -R ubuntu:ubuntu /home/ubuntu/.jupyter
