--- a/jupyter/install
+++ b/jupyter/install
@@ -25,6 +25,25 @@ echo "require(['base/js/namespace'], function(jupyter) { jupyter._target='_self'
  mkdir -p /home/ubuntu/.jupyter 
  printf "\nc.NotebookApp.token = u'' \n\n" >> /home/ubuntu/.jupyter/jupyter_notebook_config.py 
  
- 
- 
  chown -R ubuntu:ubuntu /home/ubuntu/.jupyter
+
+
+##### Deprecated but maintaining in order to maintain backwards compatibility with ipython #####
+
+ mkdir -p /home/ubuntu/.ipython/profile_default 
+echo 'c = get_config()' > /home/ubuntu/.ipython/profile_default/ipython_config.py 
+
+echo '# The default cell execution timeout in nbconvert is 30 seconds, set it to a year' >> /home/ubuntu/.ipython/profile_default/ipython_config.py 
+echo 'c.ExecutePreprocessor.timeout = 365*24*60*60' >> /home/ubuntu/.ipython/profile_default/ipython_config.py 
+
+echo '# Allow embedding of notebooks in iframes' >> /home/ubuntu/.ipython/profile_default/ipython_notebook_config.py 
+echo 'c.NotebookApp.tornado_settings = { "headers": { "Content-Security-Policy": "frame-ancestors *" } }' >> /home/ubuntu/.ipython/profile_default/ipython_notebook_config.py 
+
+echo "c.NotebookApp.token = ''" >> /home/ubuntu/.ipython/profile_default/ipython_notebook_config.py 
+#Custom js for domino header
+mkdir -p /home/ubuntu/.ipython/profile_default/static/custom/ && echo "require(['base/js/namespace'], function(IPython) { IPython._target='_self'; });" >> /home/ubuntu/.ipython/profile_default/static/custom/custom.js
+
+chown -R ubuntu:ubuntu /home/ubuntu/.ipython 
+
+
+
