--- a/jupyter/install
+++ b/jupyter/install
@@ -4,28 +4,28 @@ set -o nounset -o errexit -o pipefail
 #install Jupyter
 pip install jsonschema jupyter
 
-# #   # CONFIGURE Jupyter
-mkdir -p /home/ubuntu/.jupyter
-echo 'c = get_config()' > /home/ubuntu/.jupyter/jupyter_notebook_config.py
+# # #   # CONFIGURE Jupyter
+# mkdir -p /home/ubuntu/.jupyter
+# echo 'c = get_config()' > /home/ubuntu/.jupyter/jupyter_notebook_config.py
 
-# The default cell execution timeout in nbconvert is 30 seconds, set it to a year
-echo '# The default cell execution timeout in nbconvert is 30 seconds, set it to a year' >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
-echo 'c.ExecutePreprocessor.timeout = 365*24*60*60' >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
+# # The default cell execution timeout in nbconvert is 30 seconds, set it to a year
+# echo '# The default cell execution timeout in nbconvert is 30 seconds, set it to a year' >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
+# echo 'c.ExecutePreprocessor.timeout = 365*24*60*60' >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
 
-# Allow embedding of notebooks in iframes
-echo '# Allow embedding of notebooks in iframes' >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
-echo 'c.NotebookApp.tornado_settings = { "headers": { "Content-Security-Policy": "frame-ancestors *" } }' >> /home/ubuntu/.jupyter/jupyter_notebook_config.py 
-echo "c.NotebookApp.token = ''" >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
+# # Allow embedding of notebooks in iframes
+# echo '# Allow embedding of notebooks in iframes' >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
+# echo 'c.NotebookApp.tornado_settings = { "headers": { "Content-Security-Policy": "frame-ancestors *" } }' >> /home/ubuntu/.jupyter/jupyter_notebook_config.py 
+# echo "c.NotebookApp.token = ''" >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
 
-#Custom js for domino header. New noebooks open within the same tab with the Domino banner. 
-mkdir -p /home/ubuntu/.jupyter/custom/
-echo "require(['base/js/namespace'], function(jupyter) { jupyter._target='_self'; });" >> /home/ubuntu/.jupyter/custom/custom.js 
+# #Custom js for domino header. New noebooks open within the same tab with the Domino banner. 
+# mkdir -p /home/ubuntu/.jupyter/custom/
+# echo "require(['base/js/namespace'], function(jupyter) { jupyter._target='_self'; });" >> /home/ubuntu/.jupyter/custom/custom.js 
 
-# Disable the login for Jupyter
- mkdir -p /home/ubuntu/.jupyter 
- printf "\nc.NotebookApp.token = u'' \n\n" >> /home/ubuntu/.jupyter/jupyter_notebook_config.py 
+# # Disable the login for Jupyter
+#  mkdir -p /home/ubuntu/.jupyter 
+#  printf "\nc.NotebookApp.token = u'' \n\n" >> /home/ubuntu/.jupyter/jupyter_notebook_config.py 
  
- chown -R ubuntu:ubuntu /home/ubuntu/.jupyter
+#  chown -R ubuntu:ubuntu /home/ubuntu/.jupyter
 
 
 ##### Deprecated but maintaining in order to maintain backwards compatibility with ipython #####
