--- a/jupyter/install
+++ b/jupyter/install
@@ -5,8 +5,8 @@ set -o nounset -o errexit -o pipefail
 pip install jsonschema jupyter
 
 # # #   # CONFIGURE Jupyter
-# mkdir -p /home/ubuntu/.jupyter
-# echo 'c = get_config()' > /home/ubuntu/.jupyter/jupyter_notebook_config.py
+ mkdir -p /home/ubuntu/.jupyter
+ echo 'c = get_config()' > /home/ubuntu/.jupyter/jupyter_notebook_config.py
 
 # # The default cell execution timeout in nbconvert is 30 seconds, set it to a year
 # echo '# The default cell execution timeout in nbconvert is 30 seconds, set it to a year' >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
