--- a/jupyter/install
+++ b/jupyter/install
@@ -25,7 +25,9 @@ echo "require(['base/js/namespace'], function(jupyter) { jupyter._target='_self'
  mkdir -p /home/ubuntu/.jupyter 
  printf "\nc.NotebookApp.token = u'' \n\n" >> /home/ubuntu/.jupyter/jupyter_notebook_config.py 
  
-ln -s  /home/ubuntu/.jupyter/jupyter_notebook_config.py /home/ubuntu/.ipython/profile_default/ipython_notebook_config.py
+#   mkdir -p /home/ubuntu/.ipython/profile_default 
+#     chown -R ubuntu:ubuntu /home/ubuntu/.ipython/profile_default 
+# ln -s  /home/ubuntu/.jupyter/jupyter_notebook_config.py /home/ubuntu/.ipython/profile_default/ipython_notebook_config.py
 
 
   chown -R ubuntu:ubuntu /home/ubuntu/.jupyter
