--- a/superset/install
+++ b/superset/install
@@ -2,7 +2,7 @@ export SUPERSET_VERSION=0.20.6
 
 
     apt-get update 
-    apt-get install -y build-essential gcc libssl-dev libffi-dev libsasl2-dev libldap2-dev 
+  #  apt-get install -y build-essential gcc libssl-dev libffi-dev libsasl2-dev libldap2-dev 
     pip install --no-cache-dir psycopg2 sqlalchemy-redshift flask-appbuilder superset==$SUPERSET_VERSION 
 
 # install DB packages separately
