--- a/superset/install
+++ b/superset/install
@@ -7,6 +7,6 @@ export SUPERSET_VERSION=0.20.6
 
 # install DB packages separately
 
-    apt-get install -y libpq-dev 
+   # apt-get install -y libpq-dev 
 
     pip install ibm_db
