--- a/rstudio/install
+++ b/rstudio/install
@@ -5,8 +5,8 @@ set -o nounset -o errexit -o pipefail
  mkdir /tmp/rstudio-temp
  cd /tmp/rstudio-temp
  apt-get install -y gdebi-core libapparmor1
- wget https://download2.rstudio.org/rstudio-server-1.1.419-amd64.deb
- gdebi -n rstudio-server-1.1.419-amd64.deb
+ wget -q https://download2.rstudio.org/rstudio-server-1.1.463-amd64.deb
+ gdebi -n rstudio-server-1.1.463-amd64.deb
 
  ln -s /usr/lib/rstudio-server /usr/local/lib/rstudio-server 
  chown -R root:root /usr/lib/rstudio-server
