--- a/superset/install
+++ b/superset/install
@@ -1,7 +1,7 @@
-export SUPERSET_VERSION=0.27.0 
+export SUPERSET_VERSION=0.28.1 
      apt-get update 
      apt-get install -y build-essential gcc libssl-dev libffi-dev libsasl2-dev libldap2-dev 
-     pip install --no-cache-dir psycopg2-binary sqlalchemy-redshift flask-appbuilder==1.11.1 superset==0.27.0 
+     pip install --no-cache-dir psycopg2-binary sqlalchemy-redshift flask-appbuilder==1.11.1 superset==0.28.1 
      apt-get remove -y build-essential libssl-dev libffi-dev libsasl2-dev libldap2-dev 
      apt-get -y autoremove && apt-get clean && rm -rf /var/lib/apt/lists/*
  
@@ -13,8 +13,9 @@ export SUPERSET_VERSION=0.27.0
  
  # install mysql
  
-     wget -q https://dev.mysql.com/get/Downloads/Connector-Python/mysql-connector-python-cext_2.1.7-1ubuntu14.04_amd64.deb 
-     dpkg -i mysql-connector-python-cext_2.1.7-1ubuntu14.04_amd64.deb 
+ https://dev.mysql.com/downloads/file/?id=480101
+     wget -q https://dev.mysql.com/get/Downloads/Connector-Python/mysql-connector-python-py3_2.1.8-1ubuntu18.04_all.deb 
+     dpkg -i mysql-connector-python-py3_2.1.8-1ubuntu18.04_all.deb 
      apt-get update 
      apt-get install -y libmysqlclient-dev 
      pip install mysqlclient oursql3
