--- a/superset/install
+++ b/superset/install
@@ -1,7 +1,7 @@
-export SUPERSET_VERSION=0.29.0rc7
+export SUPERSET_VERSION=0.27.0
      apt-get update 
      apt-get install -y build-essential gcc libssl-dev libffi-dev libsasl2-dev libldap2-dev 
-     pip install --no-cache-dir psycopg2-binary sqlalchemy-redshift flask-appbuilder==1.11.1 superset==0.29.0rc7
+     pip install --no-cache-dir psycopg2-binary sqlalchemy-redshift flask-appbuilder==1.11.1 superset==0.27.0
      apt-get remove -y build-essential libssl-dev libffi-dev libsasl2-dev libldap2-dev 
      apt-get -y autoremove && apt-get clean && rm -rf /var/lib/apt/lists/*
  
