--- a/superset/install
+++ b/superset/install
@@ -1,10 +1,10 @@
-export SUPERSET_VERSION=0.28.1
+#export SUPERSET_VERSION=0.28.1
      apt-get update 
      apt-get install -y build-essential gcc libssl-dev libffi-dev libsasl2-dev libldap2-dev 
-     pip install --no-cache-dir psycopg2-binary sqlalchemy-redshift flask-appbuilder==1.12.1 superset==0.28.1
+     pip install --no-cache-dir psycopg2-binary sqlalchemy-redshift flask-appbuilder==1.12.1
      apt-get remove -y build-essential libssl-dev libffi-dev libsasl2-dev libldap2-dev 
      apt-get -y autoremove && apt-get clean && rm -rf /var/lib/apt/lists/*
- 
+     cd /tmp && wget -q https://github.com/apache/incubator-superset/archive/0.29.0rc8.zip && unzip 0.29.0rc8.zip && cd incubator-superset-0.29.0rc8/ && python setup.py
  # install DB packages separately
  
      apt-get update 
