--- a/theia/install
+++ b/theia/install
@@ -75,6 +75,10 @@ chmod g+rw /home && \
 
 export version=latest
 cd /home/ubuntu && curl https://raw.githubusercontent.com/theia-ide/theia-apps/master/theia-full-docker/latest.package.json -o package.json
+##Remove the git plug and add the python debugger
+sed -i -e 's#"@theia/git": "latest"#"python-debug": "1.0.0"#g' /home/ubuntu/package.json
+sed -i -e 's#"dependencies": {#"dependencies": {\n	        "@theia/console": "^0.3.19",\n	        "@theia/debug": "^0.3.19",\n	        "@theia/editor-preview": "^0.3.19",#g' /home/ubuntu/package.json
+
 #ARG GITHUB_TOKEN
 yarn --cache-folder ./ycache && rm -rf ./ycache
 NODE_OPTIONS="--max_old_space_size=4096" yarn theia build
