--- a/theia/install
+++ b/theia/install
@@ -76,7 +76,7 @@ chmod g+rw /home && \
 export version=latest
 cd /home/ubuntu && curl https://raw.githubusercontent.com/theia-ide/theia-apps/master/theia-full-docker/latest.package.json -o package.json
 ##Remove the git plug and add the python debugger
-sed -i -e 's#"@theia/git": "latest"#"python-debug": "1.0.0"#g' /home/ubuntu/package.json
+#sed -i -e 's#"@theia/git": "latest"#"python-debug": "1.0.0"#g' /home/ubuntu/package.json
 sed -i -e 's#"dependencies": {#"dependencies": {\n	        "@theia/console": "^0.3.19",\n	        "@theia/debug": "^0.3.19",\n	        "@theia/editor-preview": "^0.3.19",#g' /home/ubuntu/package.json
 
 #ARG GITHUB_TOKEN
