--- a/rstudio/install
+++ b/rstudio/install
@@ -6,7 +6,7 @@ mkdir -p /tmp/rstudio-temp
 cd /tmp/rstudio-temp
 apt-get install -y gdebi-core libapparmor1
 wget  -q https://download2.rstudio.org/server/trusty/amd64/rstudio-server-1.2.1335-amd64.deb
-gdebi -n trusty/amd64/rstudio-server-1.2.1335-amd64.deb
+gdebi -n rstudio-server-1.2.1335-amd64.deb
 ln -s /usr/lib/rstudio-server /usr/local/lib/rstudio-server 
 chown -R root:root /usr/lib/rstudio-server
 cd ~
