--- a/theia/install
+++ b/theia/install
@@ -7,7 +7,6 @@ apt-get -y install  xz-utils
 
 # gpg keys listed at https://github.com/nodejs/node#release-team
 
-export NODE_VERSION=10.15.3
 
 set -ex \
     && for key in \
@@ -30,7 +29,19 @@ set -ex \
     gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys "$key" ; \
     done
   
-  curl -SLO "https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION-linux-$ARCH.tar.xz" \
+  export NODE_VERSION=10.15.3
+  
+  ARCH= && dpkgArch="$(dpkg --print-architecture)" \
+    && case "${dpkgArch##*-}" in \
+    amd64) ARCH='x64';; \
+    ppc64el) ARCH='ppc64le';; \
+    s390x) ARCH='s390x';; \
+    arm64) ARCH='arm64';; \
+    armhf) ARCH='armv7l';; \
+    i386) ARCH='x86';; \
+    *) echo "unsupported architecture"; exit 1 ;; \
+    esac \
+    && curl -SLO "https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION-linux-$ARCH.tar.xz" \
     && curl -SLO --compressed "https://nodejs.org/dist/v$NODE_VERSION/SHASUMS256.txt.asc" \
     && gpg --batch --decrypt --output SHASUMS256.txt SHASUMS256.txt.asc \
     && grep " node-v$NODE_VERSION-linux-$ARCH.tar.xz\$" SHASUMS256.txt | sha256sum -c - \
