--- a/theia/install
+++ b/theia/install
@@ -65,14 +65,7 @@ set -ex \
   && rm yarn-v$YARN_VERSION.tar.gz.asc yarn-v$YARN_VERSION.tar.gz
 
 
-pip install python-language-server \
-    flake8 \
-    autopep8 \
-    futures \
-    configparser
-
-
-
+pip install python-language-server
 chmod g+rw /home && \
   mkdir -p /home/project && \
   chown -R ubuntu:ubuntu /home/project;
@@ -81,7 +74,10 @@ chmod g+rw /home && \
 ##Needed for node-gyp, nsfw build
 
 export version=latest
-cd /home/ubuntu && curl https://raw.githubusercontent.com/dominodatalab/workspace-configs/Theia/theia/package.json -o package.json
+cd /home/ubuntu && curl https://raw.githubusercontent.com/theia-ide/theia-apps/master/theia-full-docker/latest.package.json -o package.json
+##Remove the git plug and add the python debugger
+#sed -i -e 's#"@theia/git": "latest"#"python-debug": "1.0.0"#g' /home/ubuntu/package.json
+sed -i -e 's#"dependencies": {#"dependencies": {\n	        "@theia/console": "^0.3.19",\n	        "@theia/debug": "^0.3.19",\n	        "@theia/editor-preview": "^0.3.19",#g' /home/ubuntu/package.json
 
 #ARG GITHUB_TOKEN
 yarn --cache-folder ./ycache && rm -rf ./ycache
