--- a/code-server/install
+++ b/code-server/install
@@ -14,7 +14,7 @@ mkdir -p /home/ubuntu/.local/share/code-server/extensions/ms-python.python-2019.
 cd /home/ubuntu/.local/share/code-server/extensions/ms-python.python-2019.3.6558
 curl -JL https://marketplace.visualstudio.com/_apis/public/gallery/publishers/ms-python/vsextensions/python/2019.3.6558/vspackage | bsdtar -xvf - extension
 
-mv /home/ubuntu/.local/share/code-server/extensions/ms-python.python-2019.3.6558/extension /home/ubuntu/.local/share/code-server/extensions/ms-python.python-2019.3.6558
+cd /home/ubuntu/.local/share/code-server/extensions/ms-python.python-2019.3.6558/extension/ && mv * ../
 chown ubuntu:ubuntu /home/ubuntu/.local/share/code-server/
 
 
