--- a/code-server/install
+++ b/code-server/install
@@ -20,7 +20,7 @@ chown ubuntu:ubuntu /home/ubuntu/.local/share/code-server/
 
 export PATH=/opt/code-server:$PATH
 
-#echo export PATH=/opt/code-server:$PATH >> /home/ubuntu/.domino-defaults
+echo export PATH=/opt/code-server:$PATH >> /home/ubuntu/.domino-defaults
 
 pip install git+git://github.com/ChuckRIHead/jupyter_codeserver_proxy-.git
 
