--- a/code-server/install
+++ b/code-server/install
@@ -9,6 +9,7 @@ cd /opt && \
   wget -qO- https://github.com/codercom/code-server/releases/download/1.868-vsc1.33.1/code-server1.868-vsc1.33.1-linux-x64.tar.gz | tar zxvf - --strip-components=1
 
 #install the python extension for vs-code
+apt-get update -y
 apt-get install -y bsdtar
 mkdir -p /home/ubuntu/.local/share/code-server/extensions/ms-python.python-2019.3.6558 && \
 cd /home/ubuntu/.local/share/code-server/extensions/ms-python.python-2019.3.6558
