--- a/vscode/install
+++ b/vscode/install
@@ -23,3 +23,5 @@ export PATH=/opt/code-server:$PATH
 
 echo export PATH=/opt/code-server:$PATH >> /home/ubuntu/.domino-defaults
 
+rm -rf /var/lib/apt/lists/*
+
