--- a/h2o/install
+++ b/h2o/install
@@ -1,6 +1,7 @@
 cd /opt/
-wget https://h2o-release.s3.amazonaws.com/h2o/rel-wolpert/4/h2o-3.18.0.4.zip   
+wget https://h2o-release.s3.amazonaws.com/h2o/rel-wolpert/4/h2o-3.24.0.5.zip   
 cd /opt/
-unzip h2o-3.18.0.4.zip
-mv /opt/h2o-3.18.0.4 /opt/h2o
-rm /opt/h2o-3.18.0.4.zip
+unzip h2o-3.24.0.5.zip
+mv /opt/h2o-3.24.0.5 /opt/h2o
+rm /opt/h2o-3.24.0.5.zip
+chmod -R 755 /opt/h2o && chown -R ubuntu:ubuntu /opt/h2o
