--- a/vscode/install
+++ b/vscode/install
@@ -6,18 +6,12 @@ set -o nounset -o errexit -o pipefail
 cd /opt && \
   mkdir /opt/code-server && \
   cd /opt/code-server && \
-  wget -qO- https://github.com/cdr/code-server/releases/download/1.1156-vsc1.33.1/code-server1.1156-vsc1.33.1-linux-x64.tar.gz | tar zxvf - --strip-components=1
+  wget -qO- https://github.com/cdr/code-server/releases/download/2.1692-vsc1.39.2/code-server2.1692-vsc1.39.2-alpine-x86_64.tar.gz | tar zxvf - --strip-components=1
 
 
 
 #install the python extension for vs-code
-apt-get update -y
-apt-get install -y bsdtar
-mkdir -p /home/ubuntu/.local/share/code-server/extensions/ms-python.python-2019.6.24221 && \
-cd /home/ubuntu/.local/share/code-server/extensions/ms-python.python-2019.6.24221
-curl -JL https://marketplace.visualstudio.com/_apis/public/gallery/publishers/ms-python/vsextensions/python/2019.6.24221/vspackage | bsdtar -xvf - extension
-
-cd /home/ubuntu/.local/share/code-server/extensions/ms-python.python-2019.6.24221/extension/ && mv * ../
+wget -P /home/ubuntu/.local/share/code-server/extensions/ https://github.com/microsoft/vscode-python/releases/download/2019.11.50794/ms-python-release.vsix
 
 
 
