--- a/vscode/install
+++ b/vscode/install
@@ -4,7 +4,7 @@ set -o nounset -o errexit -o pipefail
 
 #install code-server  
 cd /opt && \
-  mkdir /opt/code-server && \
+  mkdir -p /opt/code-server && \
   rm -rf /opt/code-server/* && \
   cd /opt/code-server && \
   wget -qO- https://github.com/cdr/code-server/releases/download/3.0.2/code-server-3.0.2-linux-x86_64.tar.gz | tar zxvf - --strip-components=1
