Comment out VSCode extension for python

--- a/vscode/install
+++ b/vscode/install
@@ -35,11 +35,11 @@ rm -rf \
   /var/tmp/* 
 
 ##Install VSCode extensions for python (pinned to this version due to a bug)
-export PATH=/opt/code-server/bin:$PATH && \
-cd /tmp && \
-wget -q https://github.com/microsoft/vscode-python/releases/download/2020.5.86806/ms-python-release.vsix && \
-code-server \
-  --install-extension ms-python-release.vsix \
-  --extensions-dir /home/ubuntu/.local/share/code-server/extensions && \
-chown -R ubuntu:ubuntu /home/ubuntu/.local/ && \
-rm -rf /tmp/*
+# export PATH=/opt/code-server/bin:$PATH && \
+# cd /tmp && \
+# wget -q https://github.com/microsoft/vscode-python/releases/download/2020.5.86806/ms-python-release.vsix && \
+# code-server \
+#   --install-extension ms-python-release.vsix \
+#   --extensions-dir /home/ubuntu/.local/share/code-server/extensions && \
+# chown -R ubuntu:ubuntu /home/ubuntu/.local/ && \
+# rm -rf /tmp/*
