--- a/jupyter/install
+++ b/jupyter/install
@@ -2,11 +2,12 @@
 set -o nounset -o errexit -o pipefail
 
 #install Jupyter
-pip install jupyter
+pip install 'chardet<4.0,>=2.0' #version depdendency on jupyter
+pip install -U jupyter
 
 # # #   # CONFIGURE Jupyter
- mkdir -p /home/ubuntu/.jupyter
- echo 'c = get_config()' > /home/ubuntu/.jupyter/jupyter_notebook_config.py
+mkdir -p /home/ubuntu/.jupyter
+echo 'c = get_config()' > /home/ubuntu/.jupyter/jupyter_notebook_config.py
 
 # The default cell execution timeout in nbconvert is 30 seconds, set it to a year
 echo '# The default cell execution timeout in nbconvert is 30 seconds, set it to a year' >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
@@ -22,15 +23,15 @@ mkdir -p /home/ubuntu/.jupyter/custom/
 echo "require(['base/js/namespace'], function(jupyter) { jupyter._target='_self'; });" >> /home/ubuntu/.jupyter/custom/custom.js 
 
 # Disable the login for Jupyter
- mkdir -p /home/ubuntu/.jupyter 
- printf "\nc.NotebookApp.token = u'' \n\n" >> /home/ubuntu/.jupyter/jupyter_notebook_config.py 
- 
-# Maintain backward compatibility with ipython
-  mkdir -p /home/ubuntu/.ipython/profile_default 
-  ln -s   /home/ubuntu/.jupyter/jupyter_notebook_config.py /home/ubuntu/.ipython/profile_default/ipython_notebook_config.py
-  chown -R ubuntu:ubuntu /home/ubuntu/.ipython
+mkdir -p /home/ubuntu/.jupyter 
+printf "\nc.NotebookApp.token = u'' \n\n" >> /home/ubuntu/.jupyter/jupyter_notebook_config.py 
 
-  chown -R ubuntu:ubuntu /home/ubuntu/.jupyter
+# Maintain backward compatibility with ipython
+mkdir -p /home/ubuntu/.ipython/profile_default 
+ln -sf   /home/ubuntu/.jupyter/jupyter_notebook_config.py /home/ubuntu/.ipython/profile_default/ipython_notebook_config.py
+chown -R ubuntu:ubuntu /home/ubuntu/.ipython
+
+chown -R ubuntu:ubuntu /home/ubuntu/.jupyter
 
 
 
